# mini_shell

./: .gitignore  CMakeLists.txt  README.md  lshell.sh  shell.sh
src/: main.c  matcher.c  matcher.h
